syntax = "proto3";
option go_package = "github.com/coder/coder/v2/provisionersdk/proto";

package coderism;

// RichParameterOption represents a singular option that a parameter may expose.
message RichParameterOption {
  string name = 1;
  string description = 2;
  string value = 3;
  string icon = 4;
}

// RichParameter represents a variable that is exposed.
message RichParameter {
  reserved 14;
  reserved "legacy_variable_name";

  string name = 1;
  string description = 2;
  string type = 3;
  bool mutable = 4;
  string default_value = 5;
  string icon = 6;
  repeated RichParameterOption options = 7;
  string validation_regex = 8;
  string validation_error = 9;
  optional int32 validation_min = 10;
  optional int32 validation_max = 11;
  string validation_monotonic = 12;
  bool required = 13;
  // legacy_variable_name was removed (= 14)
  string display_name = 15;
  int32 order = 16;
  bool ephemeral = 17;
}

message RichParameterValue {
  string name = 1;
  string value = 2;
}